# IDEaz

./: .gitignore  AGENTS.md  README.md  bash.exe.stackdump  build.gradle.kts  build_log.txt  build_output.txt  compile_log.txt  compile_log_2.txt  get_version.sh  gradle.properties  settings.gradle.kts  setup_env.sh  test_log.txt  test_log_2.txt  test_output.txt  test_output_2.txt  version.properties
.Jules/: palette.md
.claude/: settings.local.json
.github/: dependabot.yml
.ideaz/: .gitignore
.jules/: bolt.md  palette.md  sentinel.md
app/: .gitignore  build.gradle.kts  lint-baseline.xml  proguard-rules.pro
backend/: Dockerfile  main.py  schemas.py
docs/: AGENT_GUIDE.md  AZNAVRAIL_COMPLETE_GUIDE.md  Dynamic Android App Development Exploration.md  Hybrid Host Architecture Implementation Checklist.md  IDEaz_ A Detailed Architectural Blueprint and Implementation Roadmap.md  Modular Android Development Approaches.md  Peridium IDE_ A Detailed Architectural Blueprint and Implementation Roadmap.md  Python on Android UI Research.md  TODO.md  UI_UX.md  architecture.md  audit_report.md  auth.md  blueprint.md  build_pipeline.md  conduct.md  contradictions.md  contradictions_report.md  data_layer.md  error_handling.md  fauxpas.md  file_descriptions.md  flutter_investigation.md  jules-cli.md  jules-integration.md  manifest.md  misc.md  on-device-runtimes.md  performance.md  screens.md  (+11 more)
llama-cpp-module/: CMakeLists.txt  README.md  build.gradle.kts
llama-cpp-module/src/main/cpp/: llama-android.cpp
llama-cpp-module/src/main/java/android/llama/cpp/: LLamaAndroid.kt
(+592 files in other folders)
